Changes Made and Added new Content

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="description" content="Blogs by Umar Qureshi from Thakur College of Engineering">
-	<meta name="keywords" content="dqureshiumar,Laravel,PHP,Blogs,Student,Github,2020,best blogs,best blogger,computer, technology">
+	<meta name="keywords"
+		content="dqureshiumar,Laravel,PHP,Blogs,Student,Github,2020,best blogs,best blogger,computer, technology">
 	<meta name="author" content="Umar Qureshi">
-	<title>Blog | Umar Qureshi | Technology related Blogs</title>
+	<title>Blogs | Umar Qureshi | Technology related Blogs</title>
 	<!-- FAVICON -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/dqureshiumar.png">
 	<!-- GOOGLE FONTS -->
@@ -43,9 +44,12 @@
 				<div class="top-social hidden-sm-down">
 					<div class="social-icons-header">
 						<div class="social-icons">
-							<a href="https://www.facebook.com/dqureshiumar12"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-							<a href="https://www.linkedin.com/in/umar-qureshi-a633b5151/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-							<a style="color:white" href="https://github.com/dqureshiumar"><i class="fa fa-github" aria-hidden="true"></i></a>
+							<a href="https://www.facebook.com/dqureshiumar12"><i class="fa fa-facebook"
+									aria-hidden="true"></i></a>
+							<a href="https://www.linkedin.com/in/umar-qureshi-a633b5151/"><i class="fa fa-linkedin"
+									aria-hidden="true"></i></a>
+							<a style="color:white" href="https://github.com/dqureshiumar"><i class="fa fa-github"
+									aria-hidden="true"></i></a>
 						</div>
 					</div>
 				</div>
@@ -56,15 +60,16 @@
 				<a href class="logo">
 					<img src="images/dqureshiumar.png" alt="dqureshiumar">
 				</a>
-				<button type="button" class="button-menu hidden-lg-up" data-toggle="collapse" data-target="#main-menu" aria-expanded="false">
+				<button type="button" class="button-menu hidden-lg-up" data-toggle="collapse" data-target="#main-menu"
+					aria-expanded="false">
 					<i class="fa fa-bars" aria-hidden="true"></i>
 				</button>
 
-				
+
 
 				<nav id="main-menu" class="collapse">
 					<ul>
-						<li><a href="/blogs/">Home</a></li>
+						<!-- <li><a href="/blogs/">Home</a></li> -->
 					</ul>
 				</nav>
 			</div>
@@ -74,8 +79,8 @@
 	<section class="headings">
 		<div class="text-heading text-center">
 			<div class="container">
-				<h1>Blog</h1>
-				<h2><a href>Home </a> &nbsp;/&nbsp; Blog</h2>
+				<h1>blogs</h1>
+				<h2><a href>Home </a> &nbsp;/&nbsp; Blogs</h2>
 			</div>
 		</div>
 	</section>
@@ -91,21 +96,26 @@
 							<img src="images/djangomysql/djangomysql.jpg" alt>
 							<div class="social">
 								<span class="date">20<span>Mar'20</span></span>
-								<a href="#"><i class="fa fa-user-o"></i><span>Umar Qureshi</span></a>
+								<a href="http://dqureshiumar001.000webhostapp.com" target="blank"><i
+										class="fa fa-user-o"></i><span>Umar Qureshi</span></a>
 							</div>
 							<div class="overlay">
 								<div class="box">
 									<div class="content">
 										<ul>
-											<li><a href="/blogs/connect-django-with-mysql.html"><i class="fa fa-link"></i></a></li>
+											<li><a href="/blogs/connect-django-with-mysql.html"><i
+														class="fa fa-link"></i></a></li>
 										</ul>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="blog-info">
-							<a href="/blogs/connect-django-with-mysql.html"><h3 class="mb-2">How to Connect Django with MYSQL on Windows</h3></a>
-							<p>Python provides a library called the MySql Client that helps us to connect Django with MySQL</p>
+							<a href="/blogs/connect-django-with-mysql.html">
+								<h3 class="mb-2">How to Connect Django with MYSQL on Windows</h3>
+							</a>
+							<p>Python provides a library called the MySql Client that helps us to connect Django with
+								MySQL</p>
 							<a href="/blogs/connect-django-with-mysql.html" class="btn btn-secondary">Read More...</a>
 						</div>
 					</div>
@@ -117,26 +127,65 @@
 							<img src="images/virtualenv/python-virtualenv.jpg" alt>
 							<div class="social">
 								<span class="date">21<span>Mar'20</span></span>
-								<a href="#"><i class="fa fa-user-o"></i><span>Umar Qureshi</span></a>
+								<a href="http://dqureshiumar001.000webhostapp.com" target="blank"><i
+										class="fa fa-user-o"></i><span>Umar Qureshi</span></a>
 							</div>
 							<div class="overlay">
 								<div class="box">
 									<div class="content">
 										<ul>
-											<li><a href="/blogs/setup-virtual-env-in-python.html"><i class="fa fa-link"></i></a></li>
+											<li><a href="/blogs/setup-virtual-env-in-python.html"><i
+														class="fa fa-link"></i></a></li>
 										</ul>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="blog-info">
-							<a href="/blogs/setup-virtual-env-in-python.html"><h3 class="mb-2">How to setup Virtual Environment Wrapper on Windows</h3></a>
-							<p>Python virtual environments create an isolated environment for Python projects for libraries management.</p>
+							<a href="/blogs/setup-virtual-env-in-python.html">
+								<h3 class="mb-2">How to setup Virtual Environment Wrapper on Windows</h3>
+							</a>
+							<p>Python virtual environments create an isolated environment for Python projects for
+								libraries management.</p>
 							<a href="/blogs/setup-virtual-env-in-python.html" class="btn btn-secondary">Read More...</a>
 						</div>
 					</div>
 				</div>
+
+				<div class="col-lg-4 col-md-6 blog-pots hover-effect">
+					<div class="single-blog-post">
+						<div class="blog-list img-box">
+							<img src="images/instamojo-laravel/instamojo-laravel.jpg" alt>
+							<div class="social">
+								<span class="date">15<span>Apr'20</span></span>
+								<a href="http://dqureshiumar001.000webhostapp.com" target="blank"><i
+										class="fa fa-user-o"></i><span>Umar Qureshi</span></a>
+							</div>
+							<div class="overlay">
+								<div class="box">
+									<div class="content">
+										<ul>
+											<li><a href="/blogs/instamojo-integration-laravel.html"><i
+														class="fa fa-link"></i></a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="blog-info">
+							<a href="/blogs/instamojo-integration-laravel.html">
+								<h3 class="mb-2">How to integrate Instamojo Payment Gateway in Laravel</h3>
+							</a>
+							<p>Payment Gateway integration is a must when you are making a ecommerce website. Check the
+								steps to integrate Instamojo Payment Gateway for Laravel</p>
+							<a href="/blogs/instamojo-integration-laravel.html" class="btn btn-secondary">Read
+								More...</a>
+						</div>
+					</div>
+				</div>
 			</div>
+
+
 			<!-- <nav aria-label="..." class="pt-5">
 				<ul class="pagination">
 					<li class="page-item disabled">
@@ -169,8 +218,10 @@
 							<a href class="logo">
 								<img src="images/dqureshiumar.png" alt="dqureshiumar" style="width: 70px; height:70px">
 							</a>
-							<p>I am an Information Technology student, currently pursuing my Bachelor's in Engineering from Thakur College of Engineering.</p>
-							<a href="http://dqureshiumar001.000webhostapp.com" class="btn btn-secondary">Know More...</a>
+							<p>I am an Information Technology student, currently pursuing my Bachelor's in Engineering
+								from Thakur College of Engineering.</p>
+							<a href="http://dqureshiumar001.000webhostapp.com" class="btn btn-secondary">Know
+								More...</a>
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-6">
@@ -178,8 +229,10 @@
 							<h3>Quick Links</h3>
 							<div class="nav-footer">
 								<ul>
-									<li><a href="/blogs/connect-django-with-mysql.html">How to connect Django to MySql</a></li>
-									<li><a href="#">Instamojo Integration in Laravel</a></li>
+									<li><a href="/blogs/connect-django-with-mysql.html">How to connect Django to
+											MySql</a></li>
+									<li><a href="/blogs/instamojo-integration-laravel.html">Instamojo Integration in
+											Laravel</a></li>
 									<li><a href="https://github.com/dqureshiumar">Mini Projects</a></li>
 								</ul>
 							</div>
@@ -234,7 +287,8 @@
 								<li>
 									<div class="info">
 										<i class="fa fa-linkedin" aria-hidden="true"></i>
-										<p class="in-p"><a href="https://www.linkedin.com/in/umar-qureshi-a633b5151/" style="color:white">Connect</a></p>
+										<p class="in-p"><a href="https://www.linkedin.com/in/umar-qureshi-a633b5151/"
+												style="color:white">Connect</a></p>
 									</div>
 								</li>
 								<li>
@@ -246,10 +300,18 @@
 							</ul>
 						</div>
 						<ul class="netsocials">
-							<li><a href="https://www.facebook.com/dqureshiumar12"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-							<li><a href="https://github.com/dqureshiumar"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-							<li><a href="https://www.linkedin.com/in/umar-qureshi-a633b5151/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-							<li><a href="https://www.instagram.com/_umar_qureshi_/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.facebook.com/dqureshiumar12"><i
+										style="background:transparent;border:2px;color:white" class="fa fa-facebook"
+										aria-hidden="true"></i></a></li>
+							<li><a href="https://github.com/dqureshiumar"><i
+										style="background:transparent;border:2px;color:white" class="fa fa-github"
+										aria-hidden="true"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/umar-qureshi-a633b5151/"><i
+										style="background:transparent;border:2px;color:white" class="fa fa-linkedin"
+										aria-hidden="true"></i></a></li>
+							<li><a href="https://www.instagram.com/_umar_qureshi_/"><i
+										style="background:transparent;border:2px;color:white" class="fa fa-instagram"
+										aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -257,12 +319,14 @@
 		</div>
 		<div class="second-footer">
 			<div class="container">
-				<p><script>	document.write(new Date().getFullYear())</script> © Copyright - All Rights Reserved.</p>
-				<p>Made With <i class="fa fa-heart" aria-hidden="true"></i> By <a style="color:white" href="http://dqureshiumar001.000webhostapp.com">Umar Qureshi</a></p>
+				<p>
+					<script>	document.write(new Date().getFullYear())</script> © Copyright - All Rights Reserved.</p>
+				<p>Made With <i class="fa fa-heart" aria-hidden="true"></i> By <a style="color:white"
+						href="http://dqureshiumar001.000webhostapp.com">Umar Qureshi</a></p>
 			</div>
 		</div>
 	</footer>
-	
+
 
 	<a data-scroll href="#heading" class="go-up"><i class="fa fa-angle-double-up" aria-hidden="true"></i></a>
 	<!-- END FOOTER -->
