--- a/connect-django-with-mysql.html
+++ b/connect-django-with-mysql.html
@@ -45,8 +45,8 @@
 				<div class="top-social hidden-sm-down">
 					<div class="social-icons-header">
 						<div class="social-icons">
-							<a href="https://www.facebook.com/dqureshiumar12"><i class="fa fa-facebook"
-									aria-hidden="true"></i></a>
+							<a style="color:white" href="https://www.facebook.com/dqureshiumar12"><i
+									class="fa fa-facebook" aria-hidden="true"></i></a>
 							<a href="https://www.linkedin.com/in/umar-qureshi-a633b5151/"><i class="fa fa-linkedin"
 									aria-hidden="true"></i></a>
 							<a style="color:white" href="https://github.com/dqureshiumar"><i class="fa fa-github"
