--- a/instamojo-integration-laravel.html
+++ b/instamojo-integration-laravel.html
@@ -68,7 +68,7 @@
 
 				<nav id="main-menu" class="collapse">
 					<ul>
-						<li><a href="/blogs/">&laquo;&nbsp;&nbsp;Home</a></li>
+						<li><a href="/blogs/">Home</a></li>
 					</ul>
 				</nav>
 			</div>
