Changes in Blog

--- a/instamojo-integration-laravel.html
+++ b/instamojo-integration-laravel.html
@@ -152,11 +152,12 @@
 										<li class="fontt">Now as we have our API credentials we are all set to integrate
 											it in our Web Application</li>
 										<li class="fontt">You need to make sure you have composer in your machine. If
-											not install <a href="">composer</a></li>
+											not install <a href="https://getcomposer.org/" target="blank">composer</a>
+										</li>
 										<li class="fontt">After installing composer go to your Laravel project and
 											install
 											Instamojo API using :<br>
-											<strong>composer install instamojo-php</strong></li>
+											<strong>composer require instamojo/instamojo-php</strong></li>
 										<li class="fontt">You will see our instamojo is succesfully installed in
 											composer.json</li><br><br>
 										<img src="images/instamojo-laravel/composer-json.jpg"
