New Blogs Added

--- a/index.html
+++ b/index.html
@@ -184,6 +184,38 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-lg-4 col-md-6 blog-pots hover-effect">
+					<div class="single-blog-post">
+						<div class="blog-list img-box">
+							<img src="images/laravel-heroku/laravel-heroku.jpg" alt>
+							<div class="social">
+								<span class="date">17<span>May'20</span></span>
+								<a href="http://dqureshiumar001.000webhostapp.com" target="blank"><i
+										class="fa fa-user-o"></i><span>Umar Qureshi</span></a>
+							</div>
+							<div class="overlay">
+								<div class="box">
+									<div class="content">
+										<ul>
+											<li><a href="/blogs/publish-laravel-app-on-heroku.html"><i
+														class="fa fa-link"></i></a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="blog-info">
+							<a href="/blogs/publish-laravel-app-on-heroku.html">
+								<h3 class="mb-2">How to host Laravel WebApp on Heroku for free</h3>
+							</a>
+							<p>Heroku is a free platform where we can host websites made of different programming languages like Python, Java, PHP, Ruby etc</p>
+							<a href="/blogs/publish-laravel-app-on-heroku.html" class="btn btn-secondary">Read
+								More...</a>
+						</div>
+					</div>
+				</div>
+			</div>
 
 
 			<!-- <nav aria-label="..." class="pt-5">
