--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 				<div class="col-lg-4 col-md-6 blog-pots hover-effect">
 					<div class="single-blog-post">
 						<div class="blog-list img-box">
-							<img src="images/laravel-heroku/laravel-heroku.jpg" alt>
+							<img src="images/laravel-heroku/laravel-heroku.jpg" alt="dqureshiumar">
 							<div class="social">
 								<span class="date">17<span>May'20</span></span>
 								<a href="http://dqureshiumar001.000webhostapp.com" target="blank"><i
@@ -211,6 +211,37 @@
 							</a>
 							<p>Heroku is a free platform where we can host websites made of different programming languages like Python, Java, PHP, Ruby etc</p>
 							<a href="/blogs/publish-laravel-app-on-heroku.html" class="btn btn-secondary">Read
+								More...</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 blog-pots hover-effect">
+					<div class="single-blog-post">
+						<div class="blog-list img-box">
+							<img src="images/laravel-heroku/laravel-heroku.jpg" alt="dqureshiumar">
+							<div class="social">
+								<span class="date">20<span>May'20</span></span>
+								<a href="http://dqureshiumar001.000webhostapp.com" target="blank"><i
+										class="fa fa-user-o"></i><span>Umar Qureshi</span></a>
+							</div>
+							<div class="overlay">
+								<div class="box">
+									<div class="content">
+										<ul>
+											<li><a href="/blogs/add-database-to-laravel-on-heroku.html"><i
+														class="fa fa-link"></i></a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="blog-info">
+							<a href="/blogs/add-database-to-laravel-on-heroku.html">
+								<h3 class="mb-2">Add Database to Laravel App on Heroku</h3>
+							</a>
+							<p>Heroku supports easy integration of Postgres Database to Laravel App</p>
+							<a href="/blogs/add-database-to-laravel-on-heroku.html" class="btn btn-secondary">Read
 								More...</a>
 						</div>
 					</div>
